<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuideMe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Guide.me!</string>
    <string name="menu_bt_navigate">Navigace</string>
    <string name="menu_bt_create_map">Vytvoř mapu</string>
    <string name="menu_bt_settings">Nastavení</string>
    <string name="app_author">FJFI group</string>
    <string name="title_activity_create_map">CreateMapActivity</string>
    <string name="title_activity_navigate">NavigateActivity</string>
    <string name="navigate_bt_start">start</string>
    <string name="navigate_tv_vypis">Navigace z místa A do místa B</string>
    <string name="navigate_bt_next">Další</string>
    <string name="item_name">Map name</string>
    <string name="item_description">Map description</string>
    <string name="item_delete_bt">Smazat mapu</string>
    <string name="item_play_button">Spustit navigaci</string>
    <string name="map_selection_alert_title">Vybraná mapa</string>
    <string name="map_selection_alert_msg">Opravdu si prejete vybrat mapu </string>
    <string name="map_selection_alert_msg2"> a navigovat mezi body </string>
    <string name="map_selection_alert_msg3"> a </string>
    <string name="map_selection_alert_yes">Ano</string>
    <string name="map_selection_alert_no">Ne</string>
    <string name="map_selection_tv_mapy">Mapy</string>
    <string name="map_selection_toast_download">Byla stazena mapa </string>
    <string name="map_selection_bt_download">Stáhnout mapu</string>
    <string name="map_selection_d_title">Stáhnout mapu</string>
    <string name="map_selection_point_a_title">Vyberte počáteční bod</string>
    <string name="map_selection_point_b_title">Vyberte cílový bod</string>
    <string name="dialog_download_et_search_hint">Vyledávání mapy</string>
    <string name="dialog_download_et_search_hint2">Vyledávání bodu</string>
    <string name="navigate_bt_previous">Předchozí</string>
    <string name="url_headers">http://kmlinux.fjfi.cvut.cz/~fortpet2/guideme/headings.xml</string>

</resources>
