<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="5dp" >

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/item_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/item_name"
        android:layout_marginLeft="10dp"
        android:text="@string/item_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="normal"
        android:visibility="visible" />

    <Button
        android:id="@+id/navigate_bt_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_description"
        android:layout_below="@+id/item_description"
        android:text="@string/item_play_button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/navigate_bt_next"
        android:layout_alignBottom="@+id/navigate_bt_next"
        android:layout_alignParentRight="true"
        android:text="@string/item_delete_bt" />

</RelativeLayout>