<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_guideme" />

    <Button
        android:id="@+id/buttonCreateMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="menu_bt_createMap_onClick"
        android:text="@string/menu_bt_create_map"
        android:enabled="false" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonCreateMap"
        android:layout_alignRight="@+id/buttonCreateMap"
        android:layout_below="@+id/buttonCreateMap"
        android:onClick="menu_bt_settings_onClick"
        android:text="@string/menu_bt_settings" />

    <Button
        android:id="@+id/buttonNavigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonCreateMap"
        android:layout_alignLeft="@+id/buttonCreateMap"
        android:layout_alignRight="@+id/buttonCreateMap"
        android:onClick="menu_bt_navigate_onClick"
        android:text="@string/menu_bt_navigate" />

</RelativeLayout>
